--- a/templates/publicPortal.html
+++ b/templates/publicPortal.html
@@ -17,7 +17,13 @@
   <br>
   <input type="submit" id='PillBtn' value="Verify"/>
 </form>
+<br>
+{{certificate_Number}}<br>
+{{UserName}}<br>
+{{TimeStamp}}<br>
+{{HospitalID}}<br>
+{{HospitalAddress}}<br>
+{{Vaccine}}
 
-data: {{certificate_Number}}
 </div>
 {% endblock %}
