--- a/templates/hospitalPortal.html
+++ b/templates/hospitalPortal.html
@@ -11,31 +11,29 @@
         </div>
       </div> -->
 
-      <!-- <div class="fromRows">
-        <div class="formField">
-          Name:
-          <input type="text" name="Hname" value="">
-        </div>
-      </div> -->
-
       <div class="fromRows">
         <div class="formField">
-          Hospital Address:
-          <input type="text" name="Haddr" value="" required>
+          <input type="text" name="Customer_name" placeholder='Name' value="">
         </div>
       </div>
 
-      <!-- <div class="fromRows">
+      <div class="fromRows">
         <div class="formField">
-          Hospital Pvt Key:
-          <input type="password" name="HpvtK" value="">
+          <input type="text" name="Haddr" value="" placeholder='Address' required>
         </div>
-      </div> -->
+      </div>
+
+      <div class="fromRows">
+        <div class="formField">
+          <input type="password" name="HpvtK" value="" placeholder = 'Private Key'>
+        </div>
+      </div>
       <br>
       <input type="submit" id='PillBtn' value="Vaccinate"/>
     </form>
-    <p>Note that on clicking vaccine Person, A full vaccination will be considered and QR Report certificate will be created, all information about the hospital will be taken from the blockchain, and the vaccination transaction will automatically timestamped</p>
+    <!-- <p>Note that on clicking vaccine Person, A full vaccination will be considered and QR Report certificate will be created, all information about the hospital will be taken from the blockchain, and the vaccination transaction will automatically timestamped</p> -->
 
+    <br>
     Certificate Number: {{name}}
 
   </div>
